welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-14: error: Unmatched closing brace '}' ignored here
	}
        ^Program:-12: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Program:-8: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^Program:2: error: ';' expected but 'def' found.
		if(estSurBiscuit) {x=x+1}}def haveBaggle():Boolean = {
                                          ^